PW35-Fix into section on mobiles

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -170,15 +170,21 @@ body {
   font-family: "Josefin Sans", sans-serif; }
 
 .intro--title {
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: bold;
   margin: 0;
   padding: 100px 0 20px; }
+  @media screen and (min-width: 768px) {
+    .intro--title {
+      font-size: 4rem; } }
 
 .intro--teaser {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
   margin: 0; }
+  @media screen and (min-width: 768px) {
+    .intro--teaser {
+      font-size: 2rem; } }
 
 .intro--paragraph {
   font-size: 1.2rem; }
